--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 .kotlin
+src/main/java/Sample.java
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
